# micebot

./: README.md
micebot_description/: CMakeLists.txt  package.xml
micebot_description/config/: control.yaml
micebot_description/urdf/: colors.xacro  micebot.urdf.xacro  micebot.xacro  properties.xacro  sensors_and_actuators.xacro
micebot_dockerfiles/: Dockerfile  Dockerfile.windows  docker-compose.windows.yml  docker-compose.yml
micebot_dockerfiles/install/: i_dep.sh
micebot_launch/: CMakeLists.txt  package.xml  setup.py
micebot_launch/config/: tree.yaml
micebot_launch/launch/: micebot_gazebo.launch  spawn_tree.launch
micebot_launch/micebot_launch/: spawner_node.py
micebot_launch/models/garden/: model.sdf
micebot_launch/models/ground_plane/: model.config
micebot_launch/models/mud_box/: model-1_4.sdf  model.config
micebot_launch/models/tree/: model.config  tree.dae  tree.sdf
micebot_launch/worlds/: garden.world
