<?xml version="1.0"?>
<package format="2">
  <name>micebot_launch</name>
  <version>0.0.0</version>
  <description>The micebot_launch package</description>

  <maintainer email="tran.viet.thanh.du@tut.jp">Tran Thanh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
